# ChangeLog for app-portage/cfg-update
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/cfg-update/ChangeLog,v 1.26 2011/10/02 10:52:50 rich0 Exp $

  02 Oct 2011; Richard Freeman <rich0@gentoo.org> metadata.xml:
  Taking ownership of package.

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #81177

  10 Jul 2010; Harald van Dĳk <truedfx@gentoo.org>
  cfg-update-1.8.2-r2.ebuild, +files/cfg-update-1.8.2-bashrc.patch:
  Use bashrc hook function instead of EBUILD_PHASE; check ROOT (#327563 by
  ferringb)

*cfg-update-1.8.2-r2 (15 Feb 2010)

  15 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +cfg-update-1.8.2-r2.ebuild,
  +files/cfg-update-1.8.2-xxdiff-to-beediff.patch:
  Replace xxdiff with beediff wrt #303199. Replace USE="gnome" with USE="X"
  wrt #300344.

  09 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  cfg-update-1.8.0-r6.ebuild, cfg-update-1.8.2-r1.ebuild:
  Remove USE="kde" for dev-util/xxdiff wrt #300216.

  07 Feb 2009; Raúl Porcel <armin76@gentoo.org> cfg-update-1.8.2-r1.ebuild:
  Add ~arm wrt #255203

*cfg-update-1.8.2-r1 (18 May 2007)

  18 May 2007; Harald van Dĳk <truedfx@gentoo.org>
  -cfg-update-1.8.2.ebuild, +cfg-update-1.8.2-r1.ebuild:
  Accept MERGETOOL spelling in configuration file (#179026), and respect
  ALIASFILE setting (#179025)

*cfg-update-1.8.2 (17 May 2007)

  17 May 2007; Harald van Dĳk <truedfx@gentoo.org>
  -cfg-update-1.7.2.ebuild, -cfg-update-1.8.0-r3.ebuild,
  +cfg-update-1.8.2.ebuild:
  Version bump (#178886)
  Cleanup of older versions

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  cfg-update-1.8.0-r6.ebuild:
  Stable on sparc

  13 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  cfg-update-1.8.0-r6.ebuild:
  Keyworded ~sparc wrt #170740
