@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/cfg-update
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/cfg-update/ChangeLog,v 1.26 2011/10/02 10:52:50 rich0 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/cfg-update/ChangeLog,v 1.27 2011/10/02 11:17:06 rich0 Exp $
+
+*cfg-update-1.8.4 (02 Oct 2011)
+
+  02 Oct 2011; Richard Freeman <rich0@gentoo.org> +cfg-update-1.8.4.ebuild:
+  Patches merged upstream, beediff support added, default editor changed.
 
   02 Oct 2011; Richard Freeman <rich0@gentoo.org> metadata.xml:
   Taking ownership of package.
